Changed form action to submit request to the AWS elastic beanstalk instance

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 				<!-- Form -->
 				<div class="row">
 					<div class="col-xs-12 col-md-10 col-md-offset-1">
-						<form id="file-drop" class="form loginRegistrationForm dropzone dz-clickable" action="/files">
+						<form id="file-drop" class="form loginRegistrationForm dropzone dz-clickable" 
+							action="http://simple-file-store.elasticbeanstalk.com/files">
 							<div class="dz-message needsclick">
     							Drop your files here or click to upload<br>
     							<span class="note needsclick">
@@ -128,7 +129,8 @@
 						<p>Give it a go. Remember all your files will be deleted within 24 hours!</p>
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
-								<form id="file-drop" class="form dropzone dz-clickable" action="/files">
+								<form id="file-drop" class="form dropzone dz-clickable" 
+									action="http://simple-file-store.elasticbeanstalk.com/files">
 									<div class="dz-message needsclick">
 		    							Drop your files here or click to upload<br>
 		    							<span class="note needsclick">
