Added dropzone css and share link dialog box

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="assets/css/owl.carousel.css">
 	<link rel="stylesheet" href="assets/css/app.min.css">
 	<link rel="stylesheet" href="assets/css/app.customise.css">
+	<link rel="stylesheet" href="assets/css/dropzone.css">
 	
 	<!-- Modernizr -->
 	<script src="assets/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -40,7 +41,7 @@
 						<span class="icon-bar"></span>
 					</button>
 					<h1 class="logo">
-						<a href="index.html" title="Home"><span class="sprite icon"></a>
+						<a href="index.html" title="Home"><span class="sprite icon"/></a>
 					</h1>
 				</div>
 
@@ -53,7 +54,7 @@
 				<!-- Form -->
 				<div class="row">
 					<div class="col-xs-12 col-md-10 col-md-offset-1">
-						<form id="file-drop" class="form loginRegistrationForm dropzone dz-clickable" 
+						<form id="file-drop-top" class="form dropzone dz-clickable"
 							action="http://simple-file-store.elasticbeanstalk.com/files">
 							<div class="dz-message needsclick">
     							Drop your files here or click to upload<br>
@@ -124,25 +125,26 @@
 		<div class="container">
 			<header class="text-center">
 				<div class="row">
-					<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
+					<div class="col-xs-12 col-sm-12">
 						<h2>Ready to try <strong>/tmp</strong>?</h2>
 						<p>Give it a go. Remember all your files will be deleted within 24 hours!</p>
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
-								<form id="file-drop" class="form dropzone dz-clickable" 
+								<form id="file-drop-bottom" class="form dropzone dz-clickable"
 									action="http://simple-file-store.elasticbeanstalk.com/files">
 									<div class="dz-message needsclick">
 		    							Drop your files here or click to upload<br>
 		    							<span class="note needsclick">
 		    								(Your files will be <strong>temporarily</strong> stored on our servers for up to <strong>24 hours</strong>)
 		    							</span>
-		  							</div>
+									</div>
 								</form>
 							</div>
 						</div>
 					</div>
 				</div>
 			</header>
+		</div>
 	</section>
 
 	<!-- Footer 
@@ -181,8 +183,70 @@
 		</div>
 	</footer>
 	-->
-	
-	
+
+	<div id="dropzone-preview-container">
+		<div class="dz-preview dz-file-preview">
+			<div class="dz-image"><img data-dz-thumbnail></div>
+			<div class="dz-details">
+				<div class="dz-filename"><span data-dz-name></span></div>
+				<div class="dz-fileref">
+					<button type="button" class="btn btn-success btn-share" data-toggle="modal" data-target="#share-link-dialog" data-dz-fileref data-dz-filename>
+						share
+					</button>
+				</div>
+			</div>
+			<div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress></span></div>
+			<div class="dz-error-message"><span data-dz-errormessage></span></div>
+			<div class="dz-success-mark">
+				<svg width="54px" height="54px" viewBox="0 0 54 54" version="1.1" xmlns="http://www.w3.org/2000/svg"
+						 xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"><title>Check</title>
+					<defs></defs>
+					<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+						<path
+								d="M23.5,31.8431458 L17.5852419,25.9283877 C16.0248253,24.3679711 13.4910294,24.366835 11.9289322,25.9289322 C10.3700136,27.4878508 10.3665912,30.0234455 11.9283877,31.5852419 L20.4147581,40.0716123 C20.5133999,40.1702541 20.6159315,40.2626649 20.7218615,40.3488435 C22.2835669,41.8725651 24.794234,41.8626202 26.3461564,40.3106978 L43.3106978,23.3461564 C44.8771021,21.7797521 44.8758057,19.2483887 43.3137085,17.6862915 C41.7547899,16.1273729 39.2176035,16.1255422 37.6538436,17.6893022 L23.5,31.8431458 Z M27,53 C41.3594035,53 53,41.3594035 53,27 C53,12.6405965 41.3594035,1 27,1 C12.6405965,1 1,12.6405965 1,27 C1,41.3594035 12.6405965,53 27,53 Z"
+								id="Oval-2" stroke-opacity="0.198794158" stroke="#747474" fill-opacity="0.816519475" fill="#FFFFFF"
+								sketch:type="MSShapeGroup"></path>
+					</g>
+				</svg>
+			</div>
+			<div class="dz-error-mark">
+				<svg width="54px" height="54px" viewBox="0 0 54 54" version="1.1" xmlns="http://www.w3.org/2000/svg"
+						 xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"><title>Error</title>
+					<defs></defs>
+					<g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+						<g id="Check-+-Oval-2" sketch:type="MSLayerGroup" stroke="#747474" stroke-opacity="0.198794158" fill="#FFFFFF"
+							 fill-opacity="0.816519475">
+							<path
+									d="M32.6568542,29 L38.3106978,23.3461564 C39.8771021,21.7797521 39.8758057,19.2483887 38.3137085,17.6862915 C36.7547899,16.1273729 34.2176035,16.1255422 32.6538436,17.6893022 L27,23.3431458 L21.3461564,17.6893022 C19.7823965,16.1255422 17.2452101,16.1273729 15.6862915,17.6862915 C14.1241943,19.2483887 14.1228979,21.7797521 15.6893022,23.3461564 L21.3431458,29 L15.6893022,34.6538436 C14.1228979,36.2202479 14.1241943,38.7516113 15.6862915,40.3137085 C17.2452101,41.8726271 19.7823965,41.8744578 21.3461564,40.3106978 L27,34.6568542 L32.6538436,40.3106978 C34.2176035,41.8744578 36.7547899,41.8726271 38.3137085,40.3137085 C39.8758057,38.7516113 39.8771021,36.2202479 38.3106978,34.6538436 L32.6568542,29 Z M27,53 C41.3594035,53 53,41.3594035 53,27 C53,12.6405965 41.3594035,1 27,1 C12.6405965,1 1,12.6405965 1,27 C1,41.3594035 12.6405965,53 27,53 Z"
+									id="Oval-2" sketch:type="MSShapeGroup"></path>
+						</g>
+					</g>
+				</svg>
+			</div>
+		</div>
+	</div>
+
+	<div id="share-link-dialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="share-link-label">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="share-link-label">Share link to '<span id="share-link-filename"></span>'</h4>
+				</div>
+				<div class="modal-body">
+						<div class="form-group">
+							<label for="share-link-fileref">Link to file</label>
+							<input id="share-link-fileref" type="text" class="form-control" readonly aria-describedby="help-block"/>
+							<span id="help-block" class="help-block">To share copy this URL - anyone with this link can download the file.</span>
+						</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- JS -->
 	<script src="assets/js/jquery-1.11.2.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -195,10 +259,38 @@
 
 	<script src="assets/js/dropzone.js"></script>
 	<script type="text/javascript">
-	    Dropzone.options.fileDrop = {
-	      maxFilesize: 100
-	    };
-  	</script>
+
+		var options = {
+			previewTemplate: document.querySelector('#dropzone-preview-container').innerHTML,
+			maxFilesize: 100,
+			uploadMultiple: false,
+			createImageThumbnails: false,
+			init: function() {
+				this.on("success", function(file, resp) {
+					var elem = file.previewElement.querySelector(".btn-share");
+					elem.setAttribute('data-dz-fileref', resp.href);
+					elem.setAttribute('data-dz-filename', file.name);
+				});
+			}
+		};
+
+		Dropzone.options.fileDropTop = options;
+		Dropzone.options.fileDropBottom = options;
+
+		$(document).on('click', '.btn-share', function() {
+			$('#share-link-fileref').val($(this).data('dz-fileref'));
+			$('#share-link-filename').text($(this).data('dz-filename'));
+		});
+
+		$('#share-link-dialog').on('shown.bs.modal', function () {
+			$('#share-link-fileref').focus()
+		});
+
+		$("#share-link-fileref").focus(function(){
+			this.select();
+		});
+
+	</script>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
 	<script>
