--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<div class="row">
 					<div class="col-xs-12 col-md-10 col-md-offset-1">
 						<form id="file-drop-top" class="form dropzone dz-clickable"
-							action="/files">
+							action="http://store.slashtmp.io/files">
 							<div class="dz-message needsclick">
     							Drop your files here or click to upload<br>
     							<span class="note needsclick">
@@ -131,7 +131,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
 								<form id="file-drop-bottom" class="form dropzone dz-clickable"
-									action="http://simple-file-store.elasticbeanstalk.com/files">
+									action="http://store.slashtmp.io/files">
 									<div class="dz-message needsclick">
 		    							Drop your files here or click to upload<br>
 		    							<span class="note needsclick">
