Removed hamburger menu from the mobile site

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
 		<div class="container">
 			<div class="navbar" role="navigation">
 				<div class="navbar-header">
+					<!--
 					<button type="button" class="navbar-toggle visible-xs" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
+					-->
 					<h1 class="logo">
 						<a href="index.html" title="Home"><span class="sprite icon"/></a>
 					</h1>
@@ -54,8 +56,7 @@
 				<!-- Form -->
 				<div class="row">
 					<div class="col-xs-12 col-md-10 col-md-offset-1">
-						<form id="file-drop-top" class="form dropzone dz-clickable"
-							action="http://store.slashtmp.io/files">
+						<form id="file-drop-top" class="form dropzone dz-clickable" action="http://store.slashtmp.io/files">
 							<div class="dz-message needsclick">
     							Drop your files here or click to upload<br>
     							<span class="note needsclick">
@@ -130,8 +131,7 @@
 						<p>Give it a go. Remember all your files will be deleted within 24 hours!</p>
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
-								<form id="file-drop-bottom" class="form dropzone dz-clickable"
-									action="http://store.slashtmp.io/files">
+								<form id="file-drop-bottom" class="form dropzone dz-clickable" action="http://store.slashtmp.io/files">
 									<div class="dz-message needsclick">
 		    							Drop your files here or click to upload<br>
 		    							<span class="note needsclick">
