--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -147,7 +146,7 @@
 		</div>
 	</section>
 
-	<!-- Footer 
+	<!-- Footer -->
 	<footer id="footer">
 		<div class="wrap">
 			<div class="container">
@@ -155,15 +154,17 @@
 					<div class="col-xs-6 col-sm-4 i">
 						<h2>Slashtmp</h2>
 						<div class="content">
+							<!--
 							<a href="#" title="About us">About us</a>
-							<a href="#" title="Security">Security</a>
 							<a href="#" title="Privacy and terms">Privacy &amp; terms</a>
+							-->
+							<a href="/faq" title="FAQ">Frequently Asked Questions</a>
 						</div>
 					</div>
+					<!--
 					<div class="col-xs-6 col-sm-4 i">
 						<h2>Follow Us</h2>
-						<p>Like what you see? Follow us on:</p>
-
+						<p>Follow us on:</p>
 						<div class="socials">
 							<a href="#" title="#" class="facebook"><i class="fa fa-facebook"></i></a>
 							<a href="#" title="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -172,17 +173,18 @@
 						</div>
 					</div>
 					<div class="col-xs-6 col-sm-4 i">
-						<h2>My Account</h2>
+						<h2>Support</h2>
 						<div class="content clearfix">
-							<a href="#" title="#">My account</a>
-							<a href="#" title="#">My files</a>
+							<a href="#" title="#">Privacy &amp; Terms</a>
+							<a href="#" title="#">Frequently Asked Questions</a>
 						</div>
 					</div>
+					-->
 				</div>
 			</div>
 		</div>
 	</footer>
-	-->
+
 
 	<div id="dropzone-preview-container">
 		<div class="dz-preview dz-file-preview">
