Changed min-height of the header to be 0 on non-landing page

--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
       <div class="navbar" role="navigation">
         <div class="navbar-header">
           <h1 class="logo">
-            <a href="index.html" title="Home"><span class="sprite icon"/></a>
+            <a href="/" title="Home"><span class="sprite icon"/></a>
           </h1>
         </div>
       </div>
