--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					</button>
 					-->
 					<h1 class="logo">
-						<a href="index.html" title="Home"><span class="sprite icon"/></a>
+						<a href="/" title="Home"><span class="sprite icon"/></a>
 					</h1>
 				</div>
 
