Fixed grammar mistake on the faq page

--- a/faq.html
+++ b/faq.html
@@ -64,7 +64,7 @@
             <p>
               Files uploaded to Slashtmp are publically accessible. To access a file a user needs to know its system identifier.
               These identifiers are randomly generated and difficult to guess, as such it would is difficult (but not impossible)
-              for someone to come across your file but randomly guessing its identifier.
+              for someone to come across your file by randomly guessing its identifier.
             </p>
             <h2>How much does Slashtmp cost?</h2>
             <p>
