--- a/faq.html
+++ b/faq.html
@@ -90,7 +90,7 @@
               <a href="#" title="About us">About us</a>
               <a href="#" title="Privacy and terms">Privacy &amp; terms</a>
               -->
-              <a href="faq.html" title="FAQ">Frequently Asked Questions</a>
+              <a href="/faq" title="FAQ">Frequently Asked Questions</a>
             </div>
           </div>
         </div>
