Improved the title tag contents on index and faq pages, and added meta tags to improve search engine indexing

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
+	<title>Slashtmp - unlimited cloud storage</title>
+
 	<meta charset="utf-8">
-	<title>Slashtmp</title>
-	<meta name="description" content="">
+	<meta name="description" content="Slashtmp provides unlimited, temporary cloud storage for free">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<!-- CSS -->
