--- a/faq.html
+++ b/faq.html
@@ -4,9 +4,10 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
+  <title>Slashtmp - FAQ</title>
+
   <meta charset="utf-8">
-  <title>Slashtmp</title>
-  <meta name="description" content="">
+  <meta name="description" content="Frequently asked questions about Slashtmp service">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- CSS -->
