Added about page to the web site and sitemap file

--- a/faq.html
+++ b/faq.html
@@ -87,8 +87,8 @@
           <div class="col-xs-6 col-sm-4 i">
             <h2>Slashtmp</h2>
             <div class="content">
+              <a href="/about" title="About us">About us</a>
               <!--
-              <a href="#" title="About us">About us</a>
               <a href="#" title="Privacy and terms">Privacy &amp; terms</a>
               -->
               <a href="/faq" title="FAQ">Frequently Asked Questions</a>
