Added Terms of Service page to the website

--- a/about.html
+++ b/about.html
@@ -90,9 +90,7 @@
           <h2>Slashtmp</h2>
           <div class="content">
             <a href="/about" title="About us">About us</a>
-            <!--
-            <a href="#" title="Privacy and terms">Privacy &amp; terms</a>
-            -->
+            <a href="/terms" title="Privacy and terms">Privacy &amp; terms</a>
             <a href="/faq" title="FAQ">Frequently Asked Questions</a>
           </div>
         </div>
