--- a/faq.html
+++ b/faq.html
@@ -73,6 +73,7 @@
               We are contemplating premium features that may incur costs but our free plan will continue to be as generous as it is today,
               if not more so.
             </p>
+            <hr/>
           </div>
         </div>
       </div>
@@ -88,9 +89,7 @@
             <h2>Slashtmp</h2>
             <div class="content">
               <a href="/about" title="About us">About us</a>
-              <!--
-              <a href="#" title="Privacy and terms">Privacy &amp; terms</a>
-              -->
+              <a href="/terms" title="Privacy and terms">Privacy &amp; terms</a>
               <a href="/faq" title="FAQ">Frequently Asked Questions</a>
             </div>
           </div>
