Changed the URL for the storage endpoint to be a subdomain of slashtmp.io instead of the S3 global bucket URL

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<!-- Form -->
 				<div class="row">
 					<div class="col-xs-12 col-md-10 col-md-offset-1">
-						<form id="file-drop-top" class="form dropzone dz-clickable" action="http://slashtmp.io.s3.amazonaws.com">
+						<form id="file-drop-top" class="form dropzone dz-clickable" action="http://storage.slashtmp.io">
 							<div class="dz-message needsclick">
     							Drop your files here or click to upload<br>
     							<span class="note needsclick">
@@ -131,7 +131,7 @@
 						<p>Give it a go. Remember all your files will be deleted within 24 hours!</p>
 						<div class="row">
 							<div class="col-xs-12 col-md-10 col-md-offset-1">
-								<form id="file-drop-bottom" class="form dropzone dz-clickable" action="http://slashtmp.io.s3.amazonaws.com">
+								<form id="file-drop-bottom" class="form dropzone dz-clickable" action="http://storage.slashtmp.io">
                   <div class="dz-message needsclick">
 		    							Drop your files here or click to upload<br>
 		    							<span class="note needsclick">
