Added local generation of UUIDs instead of calling a remote service

--- a/index.html
+++ b/index.html
@@ -255,11 +255,10 @@
 	<script src="assets/js/skrollr.min.js"></script>
 	<script src="assets/js/classie.js"></script>
 	<script src="assets/js/jquery.doubletaptogo.min.js"></script>
-  <script src="assets/js/app.min.js"></script>
-
-
 	<script src="assets/js/dropzone.js"></script>
+	<script src="assets/js/uuid.js"></script>
 	<script src="assets/js/dropzone.app.js"></script>
+	<script src="assets/js/app.min.js"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
