Added input field for email

--- a/index.html
+++ b/index.html
@@ -240,6 +240,13 @@
 							<input id="share-link-fileref" type="text" class="form-control" readonly aria-describedby="help-block"/>
 							<span id="help-block" class="help-block">To share copy this URL - anyone with this link can download the file.</span>
 						</div>
+						<div class="form-group">
+							<label for="share-link-via-email">Email this file</label>
+							<input id="share-link-via-email" type="email" class="form-control" aria-describedby="help-block-email" autocomplete="off"  
+								placeholder="Enter email" />
+							<span id="help-block-email" class="help-block">Email a link to this file directly to your recepient.</span>
+							<button type="button" class="btn btn-success">Send</button>
+						</div>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
