Added JavaScript to send email when Send button is clicked

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 							<input id="share-link-via-email" type="email" class="form-control" aria-describedby="help-block-email" autocomplete="off"  
 								placeholder="Enter email" />
 							<span id="help-block-email" class="help-block">Email a link to this file directly to your recepient.</span>
-							<button type="button" class="btn btn-success">Send</button>
+							<button type="button" class="btn btn-success btn-send">Send</button>
 						</div>
 				</div>
 				<div class="modal-footer">
@@ -265,6 +265,7 @@
 	<script src="assets/js/dropzone.js"></script>
 	<script src="assets/js/uuid.js"></script>
 	<script src="assets/js/dropzone.app.js"></script>
+  <script src="assets/js/email.js"></script>
 	<script src="assets/js/app.min.js"></script>
 
 	<script>
