Added spinner when sending email

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 								placeholder="Enter email" />
 							<span id="help-block-email" class="help-block">Email a link to this file directly to your recepient.</span>
 							<button type="button" class="btn btn-success btn-send">Send</button>
+              <span id="spinner"></span>
 						</div>
 				</div>
 				<div class="modal-footer">
@@ -263,6 +264,7 @@
 	<script src="assets/js/classie.js"></script>
 	<script src="assets/js/jquery.doubletaptogo.min.js"></script>
 	<script src="assets/js/dropzone.js"></script>
+  <script src="assets/js/spin.min.js"></script>
 	<script src="assets/js/uuid.js"></script>
 	<script src="assets/js/dropzone.app.js"></script>
   <script src="assets/js/email.js"></script>
