Added local storage of files

--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
 	<script src="assets/js/dropzone.js"></script>
   <script src="assets/js/spin.min.js"></script>
 	<script src="assets/js/uuid.js"></script>
+  <script src="assets/js/localstorage.js"></script>
 	<script src="assets/js/dropzone.app.js"></script>
   <script src="assets/js/email.js"></script>
 	<script src="assets/js/app.min.js"></script>
