--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 			<div class="dz-details">
 				<div class="dz-filename"><span data-dz-name></span></div>
 				<div class="dz-fileref">
-					<a class="btn btn-success btn-share" data-toggle="modal" data-target="#share-link-dialog" data-dz-fileref data-dz-filename>
+					<a class="btn btn-success btn-share" data-toggle="modal" data-target="#share-link-dialog" data-dz-metaref data-dz-fileref data-dz-filename>
 						share
 					</a>
 				</div>
