Added share button to the file viewer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="Slashtmp provides unlimited, temporary cloud storage for free">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="assets/css/app.min.css">
 	<link rel="stylesheet" href="assets/css/app.customise.css">
 	<link rel="stylesheet" href="assets/css/dropzone.css">
-	
+
 	<!-- Modernizr -->
 	<script src="assets/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
@@ -28,7 +28,7 @@
 	<!--[if lt IE 7]>
 		<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
-	
+
 	<!-- Header -->
 	<header id="header" data-0="top: 0%;" data-400="top: -10%;">
 		<div class="container">
@@ -48,11 +48,11 @@
 				</div>
 
 			</div>
-			
+
 			<div class="text-center wrap">
 				<h2>Cloud <strong>/tmp</strong> folder for all your files</h2>
 				<h3>Elastic, temporary storage for fast file sharing</h3>
-				
+
 				<!-- Form -->
 				<div class="row">
 					<div class="col-xs-12 col-md-10 col-md-offset-1">
@@ -70,7 +70,7 @@
 		</div>
 	</header>
 
-	
+
 	<!-- Features -->
 	<section class="section features">
 		<div class="container">
@@ -101,7 +101,7 @@
 					</div>
 					<h3>Private</h3>
 					<p>
-						We do not read or index your files in any way. Files are <strong>never</strong> archived and once deleted, 
+						We do not read or index your files in any way. Files are <strong>never</strong> archived and once deleted,
 						they are gone!
 					</p>
 				</div>
@@ -113,7 +113,7 @@
 						<a href="#" title="#">Everywhere</a>
 					</h3>
 					<p>
-						Share your files anonymously from anywhere, on any device but remember in <strong>24 hours</strong> 
+						Share your files anonymously from anywhere, on any device but remember in <strong>24 hours</strong>
 						they are history!
 					</p>
 				</div>
@@ -227,6 +227,7 @@
 		</div>
 	</div>
 
+	<!-- TODO exact copy exists in view.html -->
 	<div id="share-link-dialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="share-link-label">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
@@ -242,7 +243,7 @@
 						</div>
 						<div class="form-group">
 							<label for="share-link-via-email">Email this file</label>
-							<input id="share-link-via-email" type="email" class="form-control" aria-describedby="help-block-email" autocomplete="off"  
+							<input id="share-link-via-email" type="email" class="form-control" aria-describedby="help-block-email" autocomplete="off"
 								placeholder="Enter email" />
 							<span id="help-block-email" class="help-block">Email a link to this file directly to your recepient.</span>
 							<button type="button" class="btn btn-success btn-send">Send</button>
@@ -268,6 +269,7 @@
 	<script src="assets/js/uuid.js"></script>
   <script src="assets/js/localstorage.js"></script>
 	<script src="assets/js/dropzone.app.js"></script>
+	<script src="assets/js/share.dialog.js"></script>
   <script src="assets/js/email.js"></script>
 	<script src="assets/js/app.min.js"></script>
 
