Added logic to shorten the url to file...slightly

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 	<script src="assets/js/dropzone.app.js"></script>
 	<script src="assets/js/share.dialog.js"></script>
   <script src="assets/js/email.js"></script>
+  <script src="assets/js/url.utils.js"></script>
 	<script src="assets/js/app.min.js"></script>
 
 	<script>
