--- a/view.html
+++ b/view.html
@@ -64,6 +64,7 @@
 	<script src="assets/js/share.dialog.js"></script>
 	<script src="assets/js/spin.min.js"></script>
 	<script src="assets/js/email.js"></script>
+  <script src="assets/js/url.utils.js"></script>
   <script src="assets/js/viewer.js"></script>
 </body>
 </html>
